--- a/cas/build.gradle
+++ b/cas/build.gradle
@@ -43,6 +43,10 @@ repositories {
 
 dependencies {
     compile "org.apereo.cas:cas-server-webapp-tomcat:${project.'cas.version'}@war"
+    compile "org.apereo.cas:cas-server-support-jdbc:${project.'cas.version'}"
+    compile "org.apereo.cas:cas-server-support-jdbc-drivers:${project.'cas.version'}"
+    compile "org.apereo.cas:cas-server-support-ldap:${project.'cas.version'}"
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.1'
     if (!project.hasProperty('bootiful')) {
         // Other dependencies may be listed here...
     } else {
